attached_assets/Pasted-2025-02-06-15-49-23-92-0df68ae7-User-2025-02-06-07-49-23-921-telegram-ext-Updater-ERROR-Except-1738828193340.txt
2025-02-06 15:49:23.92
0df68ae7
User
2025-02-06 07:49:23,921 - telegram.ext.Updater - ERROR - Exception happened while polling for updates.
2025-02-06 15:49:23.92
0df68ae7
User
Traceback (most recent call last):
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/ext/_updater.py", line 750, in _network_loop_retry
2025-02-06 15:49:23.92
0df68ae7
User
if not await do_action():
2025-02-06 15:49:23.92
0df68ae7
User
^^^^^^^^^^^^^^^^^
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/ext/_updater.py", line 744, in do_action
2025-02-06 15:49:23.92
0df68ae7
User
return action_cb_task.result()
2025-02-06 15:49:23.92
0df68ae7
User
^^^^^^^^^^^^^^^^^^^^^^^
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/ext/_updater.py", line 371, in polling_action_cb
2025-02-06 15:49:23.92
0df68ae7
User
updates = await self.bot.get_updates(
2025-02-06 15:49:23.92
0df68ae7
User
^^^^^^^^^^^^^^^^^^^^^^^^^^^
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/ext/_extbot.py", line 650, in get_updates
2025-02-06 15:49:23.92
0df68ae7
User
updates = await super().get_updates(
2025-02-06 15:49:23.92
0df68ae7
User
^^^^^^^^^^^^^^^^^^^^^^^^^^
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/_bot.py", line 4480, in get_updates
2025-02-06 15:49:23.92
0df68ae7
User
await self._post(
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/_bot.py", line 619, in _post
2025-02-06 15:49:23.92
0df68ae7
User
return await self._do_post(
2025-02-06 15:49:23.92
0df68ae7
User
^^^^^^^^^^^^^^^^^^^^
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/ext/_extbot.py", line 354, in _do_post
2025-02-06 15:49:23.92
0df68ae7
User
return await super()._do_post(
2025-02-06 15:49:23.92
0df68ae7
User
^^^^^^^^^^^^^^^^^^^^^^^
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/_bot.py", line 648, in _do_post
2025-02-06 15:49:23.92
0df68ae7
User
result = await request.post(
2025-02-06 15:49:23.92
0df68ae7
User
^^^^^^^^^^^^^^^^^^^
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/request/_baserequest.py", line 202, in post
2025-02-06 15:49:23.92
0df68ae7
User
result = await self._request_wrapper(
2025-02-06 15:49:23.92
0df68ae7
User
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2025-02-06 15:49:23.92
0df68ae7
User
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/telegram/request/_baserequest.py", line 385, in _request_wrapper
2025-02-06 15:49:23.92
0df68ae7
User
raise Conflict(message)
2025-02-06 15:49:23.92
0df68ae7
User
telegram.error.Conflict: Conflict: terminated by other getUpdates request; make sure that only one bot instance is running

Wrap

Colors
Preview your App as a web application
No web server is currently running with ports available to view. Try running your App, and check the  to ensure ports are being forwarded correctly.
Chats
Archived
Async Await Error Troubleshooting Code Issue
just now
Deployment Logs GCE Python Main Run
24 minutes ago
Telegram Bot Update Error Handling
5 hours ago
Order Fulfillment Button Problem
12 hours ago
telegram bot code syntax error fix
14 hours ago
Telegram Bot Indentation Error Python Code
18 hours ago
save contact button feature request
18 hours ago
Debugging Python Syntax Error in Telegram Bot
19 hours ago
telegram api contact save error
22 hours ago
navigation back button implementation
2 days ago
python indentation error telegram bot code
2 days ago
search feature guide and importir lookup
2 days ago
csv importer prevent duplicate data entry method
3 days ago
postgresql table import method
3 days ago
telegram bot censorship method
3 days ago
Censorship Techniques for Company and Contact Information
3 days ago
Running the code in my project results in the following:

await
If applicable, propose a fix immediately.
KG

kancilglobalind
Assistant
just now
I see the issue in main.py. There's an await statement outside of an async function in the finally block. Let's fix this by moving the cleanup code inside a new async function.
main.py
Fix await outside function error
Running the code in my project results in the following:

File "/home/runner/workspace/main.py", line 61
    await application.stop()
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside function
If applicable, propose a fix immediately.
KG

kancilglobalind
Assistant
just now
I'll fix the finally block in main.py by moving the cleanup code into an async function.
main.py
Move cleanup into async function
Assistant automatically restarted your App after applying file changes. You can disable this behavior in .
Checkpoint made
Move cleanup code into async function
just now
•
Assistant mode

Claude 3.5 Sonnet V2

Ask Assistant, use @ to include specific files...

4s
 • 
Just now

